<resources>
    <string name="app_name">ATIN Smartface</string>
    <string name="app_version">1.0.0</string>
    <string name="label_user_name">Full name:</string>
    <string name="label_department_name">Department:</string>
    <string name="label_position_name">Position:</string>
    <string name="label_person_code">Employee code:</string>
    <string name="label_vaccine">Vaccination:</string>
    <string name="label_job_name">Job duty:</string>
    <string name="label_body_temperature">Body temperature</string>
    <string name="label_device_info">Device info</string>
    <string name="label_system_info">Server info</string>
    <string name="label_check_update_version">Check for upgrade</string>
    <string name="label_update_system">Upgrade</string>
    <string name="label_display">Display info</string>
    <string name="label_company_name">Organization name</string>
    <string name="label_ip_address">IP address</string>
    <string name="label_device_code">Device code</string>
    <string name="label_mac_address">MAC address</string>
    <string name="label_version">Version</string>
    <string name="label_imei">IMEI number</string>
    <string name="label_face_dection_angle">Face detect angle</string>
    <string name="label_config_application">Application setting</string>
    <string name="label_config_temperature_camera">Thermal sensing setting</string>
    <string name="label_config_process_image">Image processing setting</string>
    <string name="label_liveness_detect">Liveness detection</string>
    <string name="label_recognize_face_mask">Face mask detect</string>
    <string name="label_use_led">Using led</string>
    <string name="label_hide_navigator_bar">Hide navigator bar</string>
    <string name="label_hide_status_bar">Hide status bar</string>
    <string name="label_use_sound">Using speaker</string>
    <string name="label_use_temperature_camera">Using thermal sensing</string>
    <string name="label_distance_calibration">Distance to the device (cm)</string>
    <string name="label_warning_hight_temperature">High temperature warning</string>
    <string name="label_not_allow_hight_temperature">Do not allow entry or exit when body temperature is high</string>
    <string name="label_calibration_temperature_camera">Thermal sensing calibration</string>
    <string name="label_admin_permission_request">Grant administrator permission</string>
    <string name="label_time_between_recognize">Time between 2 recognition times (second)</string>
    <string name="label_time_keep_open_door">Recognize between time (millisecond)</string>
    <string name="label_time_open_door_parent">Door keeping time for authorized person(second)</string>
    <string name="label_time_distance_detect">Recognition distance (20 - 100 cm)</string>
    <string name="label_max_threshold_temperature">Temperature alert threshold</string>
    <string name="label_automatic_start">Start app automatically</string>
    <string name="label_automatic_sleep">Sleep screen automatically</string>
    <string name="label_no_delay">Recognize immediately the new face</string>
    <string name="label_use_card">Using NFC card</string>
    <string name="label_offline">Cloud authentication</string>
    <string name="label_save_person_unreg">Record stranger</string>
    <string name="label_show_person_code">Show employee code/Hide position and department</string>
    <string name="label_show_vaccine">Display vaccination info</string>
    <string name="label_show_personCode">Display personCode</string>
    <string name="label_check_access_business">Check access permission</string>
    <string name="label_check_mask">Check face mask</string>
    <string name="label_show_temperature">Show body temperature</string>
    <string name="label_check_temperature">Check body temperature</string>
    <string name="label_function">Function of the device</string>
    <string name="label_liveness_level">Checking liveness level</string>
    <string name="label_pccovid">Check pccovid</string>
    <string name="label_language">Language</string>
    <string name="label_face_recognize_parameter">Face recognition parameter</string>
    <string name="label_face_threshold">Recognition score threshold (0.75 - 1)</string>
    <string name="label_nomask_quality_threshold">Quality of image without mask (0.49 - 1)</string>
    <string name="label_mask_quality_threshold">Quality of image have mask (0.29 - 1)</string>
    <string name="label_register_quality_threshold">Quality of image register (0.63 - 1)</string>
    <string name="label_temperature_threshold">High temperature threshold (°C)</string>
    <string name="label_min_face_size">Minimum photo size</string>
    <string name="label_living_threshold">Number of checking per person (1-5)</string>
    <string name="label_server_parameter">Server information</string>
    <string name="label_bussiness_server_host">Domain/IP</string>
    <string name="label_authentication_username">Username</string>
    <string name="label_authentication_password">Password</string>
    <string name="label_update">Upgrade</string>
    <string name="label_download_and_update">Download and upgrade</string>
    <string name="label_restart_header">Daily auto reboot configuration</string>
    <string name="label_use_auto_reboot">Use daily reboot</string>
    <string name="label_time_reboot">Reboot time</string>
    <string name="label_active_code">Activation key</string>
    <string name="label_app_id">APP ID</string>
    <string name="label_active_file_name">active_result.dat</string>
    <string name="preference_app_id">app_id</string>
    <string name="preference_sdk_key">sdk_key</string>
    <string name="preference_active_key">active_key</string>
    <string name="preference_app_version">app_version</string>
    <string name="label_login_information">Login information</string>
    <string name="label_pin">PIN</string>
    <string name="label_login_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_old_password">Old password</string>
    <string name="label_new_password">New password</string>
    <string name="label_repeat_password">Repeat password</string>
    <string name="label_change_password">Change password</string>
    <string name="label_forgot_password">Forgot password</string>
    <string name="label_reset_code">Restore code</string>
    <string name="label_login">Login</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="label_apply">Apply</string>
    <string name="label_confirm_selected">CONFIRM</string>
    <string name="label_clear_event">DELETE ALL EVENTS LOG</string>
    <string name="label_clear_all">DELETE ALL DATA</string>
    <string name="label_hight_body_temperature">WARNING HIGH BODY TEMPERATURE</string>
    <string name="label_not_wear_mask">WARNING NOT WEAR MASK</string>
    <string name="label_not_access_permission">NO ACCESS PERMISSION</string>
    <string name="label_access_time_expired">ACCESS PERMISSION EXPIRED</string>
    <string name="label_person_not_found">PERSON NOT FOUND</string>
    <string name="label_out_off_time">OUT OFF ACCESS TIME</string>
    <string name="label_device_not_define">MACHINE NOT DEFINE</string>
    <string name="label_missing_access_permission">MISSING ACCESS PERMISSION</string>
    <string name="label_list_twin">LIST TWINS</string>
    <string name="label_door_type">The door type</string>
    <string name="label_wait_door_time">Wait door time (millisecond)</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="button_home_screen">Home</string>
    <string name="button_reboot">Reboot</string>
    <string name="button_clear_event_log">Clear event log</string>
    <string name="button_clear_all">Clear all data</string>
    <string name="button_screen_off">Turn Off Screen</string>
    <string name="button_options">Options</string>
    <string name="button_save">Save</string>
    <string name="button_close">Close</string>
    <string name="button_database">Gallery</string>
    <string name="button_active_offline">Active offline</string>
    <string name="button_active_online">Active online</string>
    <string name="button_calibration">calibrate</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_event">Report</string>
    <string name="message_latest_version">Version is latest</string>
    <string name="message_notification_update_firmware">Show notification update firmware</string>
    <string name="message_md5_correct">MD5 is correct</string>
    <string name="message_md5_not_correct_try_download">MD5 is not correct try to download</string>
    <string name="message_donwload_firmware_success">Download firmware finish</string>
    <string name="message_start_download_firmware">Start download firmware</string>
    <string name="message_nfc_notsupport">The device does not support NFC</string>
    <string name="message_nfc_working">Please Swipe Your Card</string>
    <string name="message_nfc_notwork">Please Go To Settings And Open The NFC Switch</string>
    <string name="message_infor_login_incorrect">Login information is incorrect</string>
    <string name="message_config_error">Device identification failed</string>
    <string name="message_action_failed">Action failed</string>
    <string name="message_action_failed_summary">Root is needed. Please enable root.</string>
    <string name="message_tooltip_calibration_camera">- Keep your face in the centre of device screen, the distance from the device to your face is about 50cm, then press Calibrate.\n - Do not move your head until calibration complete.\n - During calibration, it is recommended to use a person with a normal temperature.</string>
    <string name="msg_server_error">Error connect to server</string>
    <string name="msg_data_server_error">Error server 500</string>
    <string name="msg_null_auth_server">Username or password is incorrect</string>
    <string name="msg_timeout_error">Connect to server is timeout</string>
    <string name="msg_connect_error">Error connection</string>
    <string name="msg_authenticate_error">Authenticate to server failure</string>
    <string name="message_firmware_status">New update version %1$s</string>
    <string name="message_request_synchronize_failure">Create request is failure</string>
    <string name="message_update_firmware">Install update version %1$s</string>
    <string name="message_specific_engine_init_failed">%s init failed, code is:%d</string>
    <string name="message_camera_error_notice">Not allowed open multiple cameras at the same time on this device</string>
    <string name="message_permission_denied">Permission denied!</string>
    <string name="message_processing">Processing...</string>
    <string name="message_device_not_support">Device not support</string>
    <string name="message_clear_event">Do you want to clear all event log in the device?</string>
    <string name="message_clear_all">Do you want to clear all data in the device?</string>
    <string name="message_confirm_selected">You are solely responsible for your choices if any misconduct is detected?</string>
    <string name="message_score_matching_invalid">Recognition score threshold between 0.75 - 1</string>
    <string name="message_distance_invalid">Distance detect between 20 - 100 cm</string>
    <string name="message_delay_time_invalid">The time in 2 recognization between 1000 - 10.000 (ms)</string>
    <string name="message_update_success">Upgrade successful</string>
    <string name="message_administrator_on">Grant administration successful</string>
    <string name="message_administrator_off">Grant administration unsuccessful</string>
    <string name="message_tooltip_login">Need %1$s time to enable setting function</string>
    <string name="messge_error_config_device">Error config the device</string>
</resources>