<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Hướng dẫn"
            android:textColor="@color/cardview_dark_background"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_tooltip_calibration_camera"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="400dp"
            android:layout_height="400dp" />

        <TextView
            android:id="@+id/txtNhietDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_distance_calibration"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/darker_gray"
                    android:inputType="numberDecimal"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/button_bg"
                android:onClick="onCalibration"
                android:text="@string/button_calibration"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>